<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/_10pxh"
    style="@style/groupStylegray_300cornerRadius"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/btnCar"
        android:layout_width="@dimen/_65pxh"
        android:layout_height="@dimen/_65pxh"
        android:layout_marginStart="@dimen/_6pxh"
        android:layout_marginTop="@dimen/_7pxv"
        android:layout_marginBottom="@dimen/_14pxv"
        android:background="@drawable/rectangle_bg_teal_200_23_radius_18"
        android:paddingHorizontal="@dimen/_18pxh"
        android:paddingVertical="@dimen/_18pxv"
        android:scaleType="fitCenter"
        android:src="@drawable/img_car"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearColumnshopping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12pxh"
        android:layout_marginTop="@dimen/_16pxv"
        android:layout_marginBottom="@dimen/_25pxv"
        android:layout_weight="0.59"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtShopping"
            style="@style/txtIntersemibold16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginBottom="@dimen/_5pxh"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            tools:text="@string/lbl_shopping" />

        <TextView
            android:id="@+id/txtAmountLaporan"
            style="@style/txtIntersemibold16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5pxh"
            android:ellipsize="end"
            android:gravity="start"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            tools:text="@string/lbl_rp_544" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearColumnrp544"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12pxh"
        android:layout_marginTop="@dimen/_18pxv"
        android:layout_marginEnd="@dimen/_19pxh"
        android:layout_marginBottom="@dimen/_26pxv"
        android:layout_weight="0.19"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTanggalLaporan"
            style="@style/txtInterregular12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            tools:text="@string/lbl_10_jan_2022" />

    </LinearLayout>
</LinearLayout>
