<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15pxh"
        android:gravity="center_horizontal"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearRowarrowdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageArrowdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowdown"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtLaporan"
                style="@style/txtInterNormal20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.64"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_laporan" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15pxh"
        android:minHeight="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarToolbar" />

    <LinearLayout
        android:id="@+id/linearRowlabel"
        style="@style/groupStylegreen_300cornerRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineChart">

        <LinearLayout
            android:id="@+id/linearBase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_marginBottom="@dimen/_402pxv"
            android:layout_weight="0.55"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLabel"
                style="@style/txtIntersemibold16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_tanggal_awal" />

            <Spinner
                android:id="@+id/spinnerLaporanDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_bg_white_a700_radius_20" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearColumn"
        style="@style/groupStylegray_100cornerRadius"
        android:layout_width="408dp"
        android:layout_height="@dimen/_390pxh"
        android:layout_gravity="bottom|start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/linearRowlabel"
        app:layout_constraintEnd_toEndOf="@id/linearRowlabel"
        app:layout_constraintStart_toStartOf="@id/linearRowlabel">

        <LinearLayout
            android:id="@+id/linearColumnriwayattransak"
            style="@style/groupStylecornerRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15pxh"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRiwayatTransak"
                style="@style/txtIntersemibold15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/msg_riwayat_transak" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerLaporan"
                style="@style/groupStylecornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16pxv"
                android:orientation="vertical" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtTidakAdaTransaksi"
            style="@style/txtInterNormal20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Tidak ada transaksi" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
