<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/groupStylegray_100"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearHomeAsli"
        android:layout_width="match_parent"
        android:layout_height="863dp"
        android:layout_marginTop="@dimen/_20pxv"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/helloUsername"
            style="@style/txtInterNormal20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/_10pxh"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="Hello, Username" />

        <LinearLayout
            android:id="@+id/linearColumngroupthirtysix"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_weight="1.0"
            android:gravity="start"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearRowavailablebalan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_saldo_home"
                android:gravity="end"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearColumn"
                    style="@style/groupStylecornerRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <LinearLayout
                        android:id="@+id/linearColumnavailablebalan"
                        style="@style/groupStylecornerRadius"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtAvailablebalan"
                            style="@style/txtIntermedium15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:ellipsize="end"
                            android:lineSpacingExtra="@dimen/_4pxh"
                            android:singleLine="true"
                            android:text="@string/msg_available_balan" />

                        <TextView
                            android:id="@+id/txtCashInCard"
                            style="@style/txtIntersemibold29"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:lineSpacingExtra="@dimen/_7pxh"
                            android:singleLine="true"
                            android:text="@string/lbl_rp_50_000"
                            android:textSize="40dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearColumncash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_17pxv"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtCash"
                            style="@style/txtIntersemibold15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:ellipsize="end"
                            android:lineSpacingExtra="@dimen/_4pxh"
                            android:singleLine="true"
                            android:text="@string/cashflow" />

                        <GridView
                            android:id="@+id/gvSaldoHome"
                            android:layout_width="match_parent"
                            android:layout_height="105dp"
                            android:layout_marginTop="10dp"
                            android:numColumns="2"
                            android:horizontalSpacing="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearColumnyourbudget"
                        style="@style/groupStylecornerRadius_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtYourBudget"
                            style="@style/txtIntersemibold15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_1pxh"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:ellipsize="end"
                            android:lineSpacingExtra="@dimen/_4pxh"
                            android:singleLine="true"
                            android:text="List Transaksi" />


                    </LinearLayout>
                    <ListView
                        android:id="@+id/lvTransaksiHome"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        />
                </LinearLayout>
            </ScrollView>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearHome"
        style="@style/groupStylegray_100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_94pxv"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/frameBottombar"
            style="@style/groupStylewhite_A700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/linearRow"
                style="@style/groupStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginBottom="@dimen/_8pxv"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearRowhome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_weight="0.51"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageHome"
                        android:layout_width="@dimen/_18pxh"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_3pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_home"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_home" />

                    <ImageView
                        android:id="@+id/imageComponentThree"
                        android:layout_width="@dimen/_18pxh"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_50pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_component3"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_component3" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/frameStackplus"
                    style="@style/groupStylegreen_1"
                    android:layout_width="@dimen/_50pxh"
                    android:layout_height="@dimen/_50pxv">

                    <ImageView
                        android:id="@+id/imagePlus"
                        android:layout_width="@dimen/_14pxh"
                        android:layout_height="@dimen/_14pxh"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_marginBottom="@dimen/_17pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_plus"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_plus" />
                </FrameLayout>

                <LinearLayout
                    android:id="@+id/linearRowfolder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_weight="0.51"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageFolder"
                        android:layout_width="@dimen/_20pxh"
                        android:layout_height="@dimen/_18pxh"

                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_folder"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_folder" />

                    <ImageView
                        android:id="@+id/imageUser"
                        android:layout_width="@dimen/_16pxh"
                        android:layout_height="@dimen/_18pxh"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_49pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_user"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_user" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
